--- a/src/scss/components/_productcard.scss
+++ b/src/scss/components/_productcard.scss
@@ -18,8 +18,11 @@
 				position: absolute;
 				top: 0;
 				bottom: 0;
+				left: 0;
+				right: 0;
 				margin: auto;
-				width: 100%;
+				max-width: 100%;
+				max-height: 100%;
 			}
 
 			.no-stock-text {
